[package]
edition = "2021"
name = "dgews"
version = "0.0.8"
authors = ["MrTitanHearted"]
description = "Easy multithreaded toy windowing system for learning purposes only"
license = "MIT/Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/dgews"
homepage = "https://github.com/MrTitanHearted/dgews"
repository = "https://github.com/MrTitanHearted/dgews"
categories = ["gui", "os::windows-apis"]
include = ["src/", "LICENSE-MIT", "LICENSE-APACHE", "README.md"]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

[dependencies]
winapi = { version = "0.3.9", features = [
    "minwindef",
    "windef",
    "wingdi",
    "winuser",
    "libloaderapi",
    "dwmapi",
] }

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"

targets = [
    "aarch64-unknown-linux-gnu",
    "i686-pc-windows-gnu",
    "i686-pc-windows-msvc",
    "i686-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
    "x86_64-pc-windows-gnu",
    "x86_64-pc-windows-gnullvm",
    "x86_64-unknown-windows-gnu",
    "x86_64-unknown-linux-gnu",
    "x86_64-unknown-linux-gnux32",
    "aarch64-unknown-windows-gnu",
    "aarch64-unknown-windows-msvc",
]

cargo-args = ["-Z", "build-std"]