[package]
edition = "2021"
name = "dgews"
version = "0.0.15"
authors = ["MrTitanHearted"]
description = "Easy multithreaded toy windowing system for learning purposes only"
license = "MIT/Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/dgews/latest/dgews/"
homepage = "https://github.com/MrTitanHearted/dgews"
repository = "https://github.com/MrTitanHearted/dgews"
keywords = ["dgews", "windows", "win32", "winapi", "gui"]
categories = ["gui", "os::windows-apis"]
include = ["src/", "LICENSE-MIT", "LICENSE-APACHE", "README.md"]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

[dependencies]
winapi = { version = "0.3.9", features = [
    "minwindef",
    "windef",
    "wingdi",
    "winuser",
    "libloaderapi",
    "dwmapi",
] }

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"